# scorched3d

./: .gitignore  AUTHORS  CHANGELOG  COMPILING  README  README.md  acinclude.m4  autogen.sh  configure-al.m4  configure-flt.m4  configure-ogg.m4  configure-sdl.m4  configure-sql.m4  configure-wx.m4  configure.ac  scorched.nsi  scorched.sln
scorched/: CHANGELOG  COPYING  Makefile.am  Microsoft.VC100.CRT.manifest  Microsoft.VC80.CRT.manifest  Microsoft.VC90.CRT.manifest  Scorched3D.spec  acinclude.m4  autogen.sh  configure-al.m4  configure-fftw.m4  configure-ft.m4  configure-gl.m4  configure-ogg.m4  configure-sdl.m4  configure-sql.m4  configure-wx.m4  configure.ac  scorched-patch.nsi  scorched.nsi  scorched.sln  scorched3do.sln
scorched/data/: accessories.xml  ainames.txt  fastestdisplay.xml  keys.xml  landscapes.xml  mediumdisplay.xml  modinfo.xml  music.xml  mysql.xml  prunetables.sql  safedisplay.xml  singlecustom.xml  singlenormal.xml  singletarget.xml  singletutorial.xml  statstables.sql  tankais.xml  tanks.xml  tutorial.xml  ultradisplay.xml  windows.xml
scorched/data/accessories/: clusterbomb.ase  roller.ase
scorched/data/avatars/: agreement.txt
scorched/data/bloom/: Bloom2.material  Boom2.compositor
scorched/data/hydrax/: HydraxDemo.hdx
scorched/data/land/: TxUAIUgrassUdirtU01.dds  TxUAIUgrassUdirtU01_n.dds  TxUGLUdirtUgrassU02.dds  TxUGLUdirtUgrassU02_n.dds  TxUGLUgrassU02.dds  TxUGLUgrassU02_n.dds  TxUGLUgrassU10.dds  TxUGLUgrassU10_n.dds  TxUcoastalUrockU01.dds  TxUcoastalUrockU01_n.dds  TxUlandUdarkstone01.dds  TxUlandUdarkstone01_n.dds  TxUsandU02.dds  TxUsandU02_n.dds  TxUscrubplainU01.dds  TxUscrubplainU01_n.dds  blue.dds  green.dds  purple.dds  red.dds  terrainsnowstone01.dds  terrainsnowstone01_n.dds  white.dds
scorched/data/landscapes/: ambientsoundjungle.xml  ambientsoundnight.xml  ambientsoundrain.xml  boidsf18.xml  boidsgulls.xml  boidslargenumber.xml  defnascencion2.xml  defncanyon2.xml  defncavern.xml  defndenali.xml  defndenali2.xml  defndenali3.xml  defnglaciation.xml  defnglaciation2.xml  defnglaciation3.xml  defnhalfed.xml  defnhilly.xml  defnlowlands.xml  defnridge.xml  defntest.xml  eventsmeteor.xml  eventstest.xml  optionstest.xml  placepinelargenumber.xml  placetest.xml  shipsdestroyer1.xml  shipsdestroyer2.xml  shipspirate.xml  texcastle.xml  texcavern.xml  texdefault.xml  texdenali.xml  texdenalilandperf.xml  texnight.xml  texplage.xml  texsahara.xml  texsand.xml  textropical.xml  textuscan.xml  texvulcano.xml
scorched/data/lang/: lang.resource  lang_RU.resource  language.ini  readme_RU.txt  tips_RU.txt  tutorial_RU.xml
scorched/data/meshes/: bird.txt  rock1.ase  wind.ase
scorched/data/models/: Cube.002.mesh.xml  cone.blend  cone.mesh  cube.blend  cube.mesh  test.blend
scorched/data/rocket/: backdrop.rml  demo.rml  (+6 more)
scorched/documentation/: README-ODE.txt  README-SDLNET.txt  README-apoc.txt  README-zlib.txt
scorched/scripts/: addGPLLines.pl  checkIncludeCase.pl  createAMMakefile.pl  createDmg  framewk.sh  removeMSPragma.pl  runClient.cmd  weaponDocs.pl
scorched/src/: Makefile.am
(+4779 files in other folders)
